--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,10 @@ fabric.properties
 *.tar.gz
 *.rar
 
+# .iml file
+*.iml
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
